--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 beautifulsoup4==4.11.1
 certifi==2021.10.8
 charset-normalizer==2.0.12
+commonmark==0.9.1
 idna==3.3
+Pygments==2.12.0
 requests==2.27.1
+rich==12.2.0
 soupsieve==2.3.2.post1
 urllib3==1.26.9
